--- a/src/budgetgui/SettingsFrame.form
+++ b/src/budgetgui/SettingsFrame.form
@@ -27,9 +27,9 @@
               <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       <Component id="titleLabel" min="-2" pref="159" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="exitButton" pref="112" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
@@ -38,11 +38,10 @@
                           <Component id="editLimitButton" alignment="0" max="32767" attributes="0"/>
                           <Component id="viewLimitsButton" alignment="0" max="32767" attributes="0"/>
                           <Component id="addCategoryButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="importTipsButton" alignment="0" max="32767" attributes="0"/>
+                          <Component id="importTipsButton" alignment="0" pref="203" max="32767" attributes="0"/>
                           <Component id="findDuplicatesButton" alignment="0" max="32767" attributes="0"/>
                           <Component id="editCategoryButton" alignment="1" max="32767" attributes="0"/>
                           <Component id="removeCategoryButton" alignment="1" max="32767" attributes="0"/>
-                          <Component id="jButton1" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
@@ -77,9 +76,7 @@
               <Component id="findDuplicatesButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="importTipsButton" min="-2" pref="29" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="9" max="32767" attributes="0"/>
+              <EmptySpace pref="47" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -164,14 +161,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editCategoryButtonActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Q&apos;s on Recurring Transactions"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
