--- a/src/budgetgui/StatisticsFrame.form
+++ b/src/budgetgui/StatisticsFrame.form
@@ -32,6 +32,8 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="changeYearButton" min="-2" pref="166" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="viewBarChartButton" min="-2" pref="166" max="-2" attributes="0"/>
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                   <Component id="highestIncomeLabel" alignment="1" max="32767" attributes="0"/>
@@ -73,7 +75,10 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="titleLabel" min="-2" pref="49" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="changeYearButton" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="changeYearButton" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="viewBarChartButton" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="totalSpendingLabel" min="-2" pref="40" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -271,6 +276,14 @@
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="Highest Income Month: June ($1700)"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="viewBarChartButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="View Bar Chart"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="viewBarChartButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
