--- a/src/budgetgui/SettingsFrame.form
+++ b/src/budgetgui/SettingsFrame.form
@@ -25,40 +25,39 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
-                      <Component id="titleLabel" min="-2" pref="159" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="exitButton" pref="112" max="32767" attributes="0"/>
-                  </Group>
-                  <Group type="102" attributes="0">
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="viewCategoriesButton" max="32767" attributes="0"/>
-                          <Component id="editLimitButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="viewLimitsButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="addCategoryButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="importTipsButton" alignment="0" pref="203" max="32767" attributes="0"/>
-                          <Component id="findDuplicatesButton" alignment="0" max="32767" attributes="0"/>
-                          <Component id="editCategoryButton" alignment="1" max="32767" attributes="0"/>
-                          <Component id="removeCategoryButton" alignment="1" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                  </Group>
+              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                  <Component id="viewCategoriesButton" max="32767" attributes="0"/>
+                  <Component id="editLimitButton" alignment="0" max="32767" attributes="0"/>
+                  <Component id="viewLimitsButton" alignment="0" max="32767" attributes="0"/>
+                  <Component id="addCategoryButton" alignment="0" max="32767" attributes="0"/>
+                  <Component id="importTipsButton" alignment="0" pref="203" max="32767" attributes="0"/>
+                  <Component id="findDuplicatesButton" alignment="0" max="32767" attributes="0"/>
+                  <Component id="editCategoryButton" alignment="1" max="32767" attributes="0"/>
+                  <Component id="removeCategoryButton" alignment="1" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <Component id="lightDarkModeButton" pref="124" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
+              <Component id="titleLabel" min="-2" pref="159" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
+              <Component id="exitButton" pref="124" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="titleLabel" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="exitButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="titleLabel" pref="32" max="32767" attributes="0"/>
+                      </Group>
                   </Group>
-                  <Component id="exitButton" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="lightDarkModeButton" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="viewCategoriesButton" min="-2" max="-2" attributes="0"/>
@@ -76,7 +75,7 @@
               <Component id="findDuplicatesButton" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="importTipsButton" min="-2" pref="29" max="-2" attributes="0"/>
-              <EmptySpace pref="47" max="32767" attributes="0"/>
+              <EmptySpace pref="41" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -161,6 +160,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editCategoryButtonActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="lightDarkModeButton">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Dark Mode"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="lightDarkModeButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
